assets/fonts/css/main.css
body {
  padding-top: 75px;
  color: #fff;
  background-color: #111233;
  font-size: 1.1rem;
  font-family:   Calibri, 'Trebuchet MS', sans-serif, 'Arial Narrow', Arial, sans-serif, Courier, monospace;
}

section {
  padding: 60px 0;
}

.text-xl {
  font-size: 1.25rem;
  line-height: 1.75rem;
}

@media (max-width:576px){
  .text-xl {
    font-size: 0.74rem;
    line-height: 1.25rem;
  }
}
.bar-primary{
  height:4px;
  width:40px;
  border-radius: 5px;
  background: linear-gradient(to right,#a109d5,#d9147d);
  transition: width 0.2s ease;
}

.navbar-brand {
  background-clip: text;
  background: -webkit-linear-gradient(#8d05bb,#f8389e);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
.myShadow {
  --tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
}

.card-tools img{
  height: 3.5rem;
  width: 3.5rem;
}
.transition{
  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 200ms;
  --tw-translate-x: 0;
  --tw-translate-y: 0;
  --tw-rotate: 0;
  --tw-skew-x: 0;
  --tw-skew-y: 0;
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.transition:hover{
  --tw-translate-y: -0.5rem;
}

.img-project  {
  min-height: 220px;
  object-fit: cover;
  position: relative;
  transition: all .2s;
  -webkit-transition:all .2s; 
  -moz-transition:all .2s;

}
.card-project {
  border-radius: 1rem;
  box-shadow: none;
}

@media screen and (min-width: 768px) {
  .card-project {
    box-shadow: 8px 0px 0px #1913249f;
  }
}
.card:hover img.img-project{
  
  transform:scale(1.1) ;
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  box-shadow: 0 0 5px -2px rgba(0,0,0,0.3);
  /* transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1); */
  
}

.card:hover .bar-primary{
  width: 70px;
}

a, a:hover{
	text-decoration: none;
  color: #c540c5;
}

.form-control:focus, .form-control {
  color: #fff;
  border-color: #7577a6;
  outline: 0;
  box-shadow: none;
}

.btn.btn-primary:focus, .btn.btn-outline-primary:focus {
  outline: 0;
  box-shadow: none;
}

.hire-me-btn {
  color: #c540c5!important;
  border-color: #c540c5;
}

 .btn-outline-primary {
  color: #c540c5;
  border-color: #c540c5;
}
.hire-me-btn:hover , .btn-outline-primary:hover {
  color: #fff !important;
  background: linear-gradient(to right,#8d05bb,#f8389e);
  border-color: #622e69;
}

.btn-primary {
  color: #fff;
  background: linear-gradient(to right,#8d05bb,#f8389e);
  border-color: #622e69;
}

.btn-primary:hover {
  color: #fff;
  background-color: #8155b9;
  border-color: #8d05bb;
}

.text-primary {
  color: #7577a6 !important;
}

.bg-primary {
  background-color: #111233!important;
}

.bg-light {
  background-color: #1d1e4f!important;
}

::selection {
  background: #d8d9ffc5;
  /* text-shadow: none; */
}

.navbar-dark .navbar-nav .nav-link {
  color: #7577a6;
}
.navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
  color: #fff;
}

